--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-click==6.6
-Flask==0.11.1
-GitHub-Flask==3.1.2
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-requests==2.10.0
-Werkzeug==0.11.10
+Click==7.0
+Flask==1.0.2
+GitHub-Flask==3.2.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+requests==2.21.0
+Werkzeug==0.14.1
